lex.output
Terminaux inutilisés dans la grammaire

    tERROR
    tRETURN


Grammaire

    0 $accept: Input $end

    1 Input: Function
    2      | Function Input

    3 Function: Type FunctionName contenu

    4 FunctionName: tMAIN FunctionPara
    5             | tID FunctionPara

    6 FunctionPara: tLPAR tRPAR
    7             | tLPAR tVOID tRPAR
    8             | tLPAR Parametre tRPAR

    9 Parametre: Type tID
   10          | Parametre tCOMMA Type tID

   11 Type: tINT
   12     | tFLOAT
   13     | tCHAR

   14 contenu: tLBRACE tRBRACE

   15 $@1: ε

   16 contenu: tLBRACE $@1 excus tRBRACE

   17 excus: excu excus
   18      | excu

   19 excu: Aff
   20     | Print
   21     | Declaration
   22     | IfStatement
   23     | WhileStatement

   24 Aff: tID tAFFECT E tSEMI

   25 Print: tPRINTF tLPAR E tRPAR tSEMI

   26 $@2: ε

   27 Declaration: Type $@2 AffectationDuringDeclaration MultipleDeclaration tSEMI

   28 $@3: ε

   29 Declaration: tCONST Type $@3 AffectationDuringDeclaration MultipleDeclaration tSEMI

   30 MultipleDeclaration: tCOMMA AffectationDuringDeclaration MultipleDeclaration
   31                    | ε

   32 $@4: ε

   33 AffectationDuringDeclaration: tID tAFFECT $@4 E
   34                             | tID

   35 $@5: ε

   36 $@6: ε

   37 IfStatement: tIF Condition $@5 tLBRACE excus $@6 tRBRACE

   38 $@7: ε

   39 $@8: ε

   40 $@9: ε

   41 IfStatement: tIF Condition $@7 excus $@8 tELSE tLBRACE excus $@9 tRBRACE

   42 WhileStatement: tWHILE Condition contenu

   43 Condition: tLPAR E tCOMPEQ E tRPAR
   44          | tLPAR E tCOMPL E tRPAR
   45          | tLPAR E tCOMPG E tRPAR
   46          | tLPAR E tCOMPLE E tRPAR
   47          | tLPAR E tCOMPGE E tRPAR
   48          | tLPAR E tCOMPNEQ E tRPAR
   49          | tLPAR E tRPAR

   50 E: tID
   51  | tREAL
   52  | tNUMBER
   53  | E tADD E
   54  | tLPAR E tADD E tRPAR
   55  | E tSUB E
   56  | tLPAR E tSUB E tRPAR
   57  | E tMUL E
   58  | tLPAR E tMUL E tRPAR
   59  | E tDIV E
   60  | tLPAR E tDIV E tRPAR


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tID <str> (258) 5 9 10 24 33 34 50
    tNUMBER <number> (259) 52
    tREAL <reel> (260) 51
    tINT <type> (261) 11
    tCHAR <type> (262) 13
    tFLOAT <type> (263) 12
    tDIV (264) 59 60
    tMUL (265) 57 58
    tADD (266) 53 54
    tSUB (267) 55 56
    tAFFECT (268) 24 33
    tLBRACE (269) 14 16 37 41
    tRBRACE (270) 14 16 37 41
    tLPAR (271) 6 7 8 25 43 44 45 46 47 48 49 54 56 58 60
    tRPAR (272) 6 7 8 25 43 44 45 46 47 48 49 54 56 58 60
    tVOID (273) 7
    tERROR (274)
    tSEMI (275) 24 25 27 29
    tCOMMA (276) 10 30
    tMAIN (277) 4
    tRETURN (278)
    tCONST (279) 29
    tPRINTF (280) 25
    tIF <number> (281) 37 41
    tWHILE <number> (282) 42
    tELSE <number> (283) 41
    tCOMPEQ (284) 43
    tCOMPL (285) 44
    tCOMPG (286) 45
    tCOMPLE (287) 46
    tCOMPGE (288) 47
    tCOMPNEQ (289) 48


Non-terminaux, suivis des règles où ils apparaissent

    $accept (35)
        à gauche: 0
    Input (36)
        à gauche: 1 2
        à droite: 0 2
    Function (37)
        à gauche: 3
        à droite: 1 2
    FunctionName (38)
        à gauche: 4 5
        à droite: 3
    FunctionPara (39)
        à gauche: 6 7 8
        à droite: 4 5
    Parametre (40)
        à gauche: 9 10
        à droite: 8 10
    Type <type> (41)
        à gauche: 11 12 13
        à droite: 3 9 10 27 29
    contenu (42)
        à gauche: 14 16
        à droite: 3 42
    $@1 (43)
        à gauche: 15
        à droite: 16
    excus (44)
        à gauche: 17 18
        à droite: 16 17 37 41
    excu (45)
        à gauche: 19 20 21 22 23
        à droite: 17 18
    Aff (46)
        à gauche: 24
        à droite: 19
    Print (47)
        à gauche: 25
        à droite: 20
    Declaration (48)
        à gauche: 27 29
        à droite: 21
    $@2 (49)
        à gauche: 26
        à droite: 27
    $@3 (50)
        à gauche: 28
        à droite: 29
    MultipleDeclaration (51)
        à gauche: 30 31
        à droite: 27 29 30
    AffectationDuringDeclaration (52)
        à gauche: 33 34
        à droite: 27 29 30
    $@4 (53)
        à gauche: 32
        à droite: 33
    IfStatement (54)
        à gauche: 37 41
        à droite: 22
    $@5 (55)
        à gauche: 35
        à droite: 37
    $@6 (56)
        à gauche: 36
        à droite: 37
    $@7 (57)
        à gauche: 38
        à droite: 41
    $@8 (58)
        à gauche: 39
        à droite: 41
    $@9 (59)
        à gauche: 40
        à droite: 41
    WhileStatement (60)
        à gauche: 42
        à droite: 23
    Condition <number> (61)
        à gauche: 43 44 45 46 47 48 49
        à droite: 37 41 42
    E <number> (62)
        à gauche: 50 51 52 53 54 55 56 57 58 59 60
        à droite: 24 25 33 43 44 45 46 47 48 49 53 54 55 56 57 58 59 60


État 0

    0 $accept: • Input $end

    tINT    décalage et aller à l'état 1
    tCHAR   décalage et aller à l'état 2
    tFLOAT  décalage et aller à l'état 3

    Input     aller à l'état 4
    Function  aller à l'état 5
    Type      aller à l'état 6


État 1

   11 Type: tINT •

    $défaut  réduction par utilisation de la règle 11 (Type)


État 2

   13 Type: tCHAR •

    $défaut  réduction par utilisation de la règle 13 (Type)


État 3

   12 Type: tFLOAT •

    $défaut  réduction par utilisation de la règle 12 (Type)


État 4

    0 $accept: Input • $end

    $end  décalage et aller à l'état 7


État 5

    1 Input: Function •
    2      | Function • Input

    tINT    décalage et aller à l'état 1
    tCHAR   décalage et aller à l'état 2
    tFLOAT  décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 1 (Input)

    Input     aller à l'état 8
    Function  aller à l'état 5
    Type      aller à l'état 6


État 6

    3 Function: Type • FunctionName contenu

    tID    décalage et aller à l'état 9
    tMAIN  décalage et aller à l'état 10

    FunctionName  aller à l'état 11


État 7

    0 $accept: Input $end •

    $défaut  accepter


État 8

    2 Input: Function Input •

    $défaut  réduction par utilisation de la règle 2 (Input)


État 9

    5 FunctionName: tID • FunctionPara

    tLPAR  décalage et aller à l'état 12

    FunctionPara  aller à l'état 13


État 10

    4 FunctionName: tMAIN • FunctionPara

    tLPAR  décalage et aller à l'état 12

    FunctionPara  aller à l'état 14


État 11

    3 Function: Type FunctionName • contenu

    tLBRACE  décalage et aller à l'état 15

    contenu  aller à l'état 16


État 12

    6 FunctionPara: tLPAR • tRPAR
    7             | tLPAR • tVOID tRPAR
    8             | tLPAR • Parametre tRPAR

    tINT    décalage et aller à l'état 1
    tCHAR   décalage et aller à l'état 2
    tFLOAT  décalage et aller à l'état 3
    tRPAR   décalage et aller à l'état 17
    tVOID   décalage et aller à l'état 18

    Parametre  aller à l'état 19
    Type       aller à l'état 20


État 13

    5 FunctionName: tID FunctionPara •

    $défaut  réduction par utilisation de la règle 5 (FunctionName)


État 14

    4 FunctionName: tMAIN FunctionPara •

    $défaut  réduction par utilisation de la règle 4 (FunctionName)


État 15

   14 contenu: tLBRACE • tRBRACE
   16        | tLBRACE • $@1 excus tRBRACE

    tRBRACE  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 15 ($@1)

    $@1  aller à l'état 22


État 16

    3 Function: Type FunctionName contenu •

    $défaut  réduction par utilisation de la règle 3 (Function)


État 17

    6 FunctionPara: tLPAR tRPAR •

    $défaut  réduction par utilisation de la règle 6 (FunctionPara)


État 18

    7 FunctionPara: tLPAR tVOID • tRPAR

    tRPAR  décalage et aller à l'état 23


État 19

    8 FunctionPara: tLPAR Parametre • tRPAR
   10 Parametre: Parametre • tCOMMA Type tID

    tRPAR   décalage et aller à l'état 24
    tCOMMA  décalage et aller à l'état 25


État 20

    9 Parametre: Type • tID

    tID  décalage et aller à l'état 26


État 21

   14 contenu: tLBRACE tRBRACE •

    $défaut  réduction par utilisation de la règle 14 (contenu)


État 22

   16 contenu: tLBRACE $@1 • excus tRBRACE

    tID      décalage et aller à l'état 27
    tINT     décalage et aller à l'état 1
    tCHAR    décalage et aller à l'état 2
    tFLOAT   décalage et aller à l'état 3
    tCONST   décalage et aller à l'état 28
    tPRINTF  décalage et aller à l'état 29
    tIF      décalage et aller à l'état 30
    tWHILE   décalage et aller à l'état 31

    Type            aller à l'état 32
    excus           aller à l'état 33
    excu            aller à l'état 34
    Aff             aller à l'état 35
    Print           aller à l'état 36
    Declaration     aller à l'état 37
    IfStatement     aller à l'état 38
    WhileStatement  aller à l'état 39


État 23

    7 FunctionPara: tLPAR tVOID tRPAR •

    $défaut  réduction par utilisation de la règle 7 (FunctionPara)


État 24

    8 FunctionPara: tLPAR Parametre tRPAR •

    $défaut  réduction par utilisation de la règle 8 (FunctionPara)


État 25

   10 Parametre: Parametre tCOMMA • Type tID

    tINT    décalage et aller à l'état 1
    tCHAR   décalage et aller à l'état 2
    tFLOAT  décalage et aller à l'état 3

    Type  aller à l'état 40


État 26

    9 Parametre: Type tID •

    $défaut  réduction par utilisation de la règle 9 (Parametre)


État 27

   24 Aff: tID • tAFFECT E tSEMI

    tAFFECT  décalage et aller à l'état 41


État 28

   29 Declaration: tCONST • Type $@3 AffectationDuringDeclaration MultipleDeclaration tSEMI

    tINT    décalage et aller à l'état 1
    tCHAR   décalage et aller à l'état 2
    tFLOAT  décalage et aller à l'état 3

    Type  aller à l'état 42


État 29

   25 Print: tPRINTF • tLPAR E tRPAR tSEMI

    tLPAR  décalage et aller à l'état 43


État 30

   37 IfStatement: tIF • Condition $@5 tLBRACE excus $@6 tRBRACE
   41            | tIF • Condition $@7 excus $@8 tELSE tLBRACE excus $@9 tRBRACE

    tLPAR  décalage et aller à l'état 44

    Condition  aller à l'état 45


État 31

   42 WhileStatement: tWHILE • Condition contenu

    tLPAR  décalage et aller à l'état 44

    Condition  aller à l'état 46


État 32

   27 Declaration: Type • $@2 AffectationDuringDeclaration MultipleDeclaration tSEMI

    $défaut  réduction par utilisation de la règle 26 ($@2)

    $@2  aller à l'état 47


État 33

   16 contenu: tLBRACE $@1 excus • tRBRACE

    tRBRACE  décalage et aller à l'état 48


État 34

   17 excus: excu • excus
   18      | excu •

    tID      décalage et aller à l'état 27
    tINT     décalage et aller à l'état 1
    tCHAR    décalage et aller à l'état 2
    tFLOAT   décalage et aller à l'état 3
    tCONST   décalage et aller à l'état 28
    tPRINTF  décalage et aller à l'état 29
    tIF      décalage et aller à l'état 30
    tWHILE   décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 18 (excus)

    Type            aller à l'état 32
    excus           aller à l'état 49
    excu            aller à l'état 34
    Aff             aller à l'état 35
    Print           aller à l'état 36
    Declaration     aller à l'état 37
    IfStatement     aller à l'état 38
    WhileStatement  aller à l'état 39


État 35

   19 excu: Aff •

    $défaut  réduction par utilisation de la règle 19 (excu)


État 36

   20 excu: Print •

    $défaut  réduction par utilisation de la règle 20 (excu)


État 37

   21 excu: Declaration •

    $défaut  réduction par utilisation de la règle 21 (excu)


État 38

   22 excu: IfStatement •

    $défaut  réduction par utilisation de la règle 22 (excu)


État 39

   23 excu: WhileStatement •

    $défaut  réduction par utilisation de la règle 23 (excu)


État 40

   10 Parametre: Parametre tCOMMA Type • tID

    tID  décalage et aller à l'état 50


État 41

   24 Aff: tID tAFFECT • E tSEMI

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 55


État 42

   29 Declaration: tCONST Type • $@3 AffectationDuringDeclaration MultipleDeclaration tSEMI

    $défaut  réduction par utilisation de la règle 28 ($@3)

    $@3  aller à l'état 56


État 43

   25 Print: tPRINTF tLPAR • E tRPAR tSEMI

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 57


État 44

   43 Condition: tLPAR • E tCOMPEQ E tRPAR
   44          | tLPAR • E tCOMPL E tRPAR
   45          | tLPAR • E tCOMPG E tRPAR
   46          | tLPAR • E tCOMPLE E tRPAR
   47          | tLPAR • E tCOMPGE E tRPAR
   48          | tLPAR • E tCOMPNEQ E tRPAR
   49          | tLPAR • E tRPAR

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 58


État 45

   37 IfStatement: tIF Condition • $@5 tLBRACE excus $@6 tRBRACE
   41            | tIF Condition • $@7 excus $@8 tELSE tLBRACE excus $@9 tRBRACE

    tLBRACE  réduction par utilisation de la règle 35 ($@5)
    $défaut  réduction par utilisation de la règle 38 ($@7)

    $@5  aller à l'état 59
    $@7  aller à l'état 60


État 46

   42 WhileStatement: tWHILE Condition • contenu

    tLBRACE  décalage et aller à l'état 15

    contenu  aller à l'état 61


État 47

   27 Declaration: Type $@2 • AffectationDuringDeclaration MultipleDeclaration tSEMI

    tID  décalage et aller à l'état 62

    AffectationDuringDeclaration  aller à l'état 63


État 48

   16 contenu: tLBRACE $@1 excus tRBRACE •

    $défaut  réduction par utilisation de la règle 16 (contenu)


État 49

   17 excus: excu excus •

    $défaut  réduction par utilisation de la règle 17 (excus)


État 50

   10 Parametre: Parametre tCOMMA Type tID •

    $défaut  réduction par utilisation de la règle 10 (Parametre)


État 51

   50 E: tID •

    $défaut  réduction par utilisation de la règle 50 (E)


État 52

   52 E: tNUMBER •

    $défaut  réduction par utilisation de la règle 52 (E)


État 53

   51 E: tREAL •

    $défaut  réduction par utilisation de la règle 51 (E)


État 54

   54 E: tLPAR • E tADD E tRPAR
   56  | tLPAR • E tSUB E tRPAR
   58  | tLPAR • E tMUL E tRPAR
   60  | tLPAR • E tDIV E tRPAR

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 64


État 55

   24 Aff: tID tAFFECT E • tSEMI
   53 E: E • tADD E
   55  | E • tSUB E
   57  | E • tMUL E
   59  | E • tDIV E

    tDIV   décalage et aller à l'état 65
    tMUL   décalage et aller à l'état 66
    tADD   décalage et aller à l'état 67
    tSUB   décalage et aller à l'état 68
    tSEMI  décalage et aller à l'état 69


État 56

   29 Declaration: tCONST Type $@3 • AffectationDuringDeclaration MultipleDeclaration tSEMI

    tID  décalage et aller à l'état 62

    AffectationDuringDeclaration  aller à l'état 70


État 57

   25 Print: tPRINTF tLPAR E • tRPAR tSEMI
   53 E: E • tADD E
   55  | E • tSUB E
   57  | E • tMUL E
   59  | E • tDIV E

    tDIV   décalage et aller à l'état 65
    tMUL   décalage et aller à l'état 66
    tADD   décalage et aller à l'état 67
    tSUB   décalage et aller à l'état 68
    tRPAR  décalage et aller à l'état 71


État 58

   43 Condition: tLPAR E • tCOMPEQ E tRPAR
   44          | tLPAR E • tCOMPL E tRPAR
   45          | tLPAR E • tCOMPG E tRPAR
   46          | tLPAR E • tCOMPLE E tRPAR
   47          | tLPAR E • tCOMPGE E tRPAR
   48          | tLPAR E • tCOMPNEQ E tRPAR
   49          | tLPAR E • tRPAR
   53 E: E • tADD E
   55  | E • tSUB E
   57  | E • tMUL E
   59  | E • tDIV E

    tDIV      décalage et aller à l'état 65
    tMUL      décalage et aller à l'état 66
    tADD      décalage et aller à l'état 67
    tSUB      décalage et aller à l'état 68
    tRPAR     décalage et aller à l'état 72
    tCOMPEQ   décalage et aller à l'état 73
    tCOMPL    décalage et aller à l'état 74
    tCOMPG    décalage et aller à l'état 75
    tCOMPLE   décalage et aller à l'état 76
    tCOMPGE   décalage et aller à l'état 77
    tCOMPNEQ  décalage et aller à l'état 78


État 59

   37 IfStatement: tIF Condition $@5 • tLBRACE excus $@6 tRBRACE

    tLBRACE  décalage et aller à l'état 79


État 60

   41 IfStatement: tIF Condition $@7 • excus $@8 tELSE tLBRACE excus $@9 tRBRACE

    tID      décalage et aller à l'état 27
    tINT     décalage et aller à l'état 1
    tCHAR    décalage et aller à l'état 2
    tFLOAT   décalage et aller à l'état 3
    tCONST   décalage et aller à l'état 28
    tPRINTF  décalage et aller à l'état 29
    tIF      décalage et aller à l'état 30
    tWHILE   décalage et aller à l'état 31

    Type            aller à l'état 32
    excus           aller à l'état 80
    excu            aller à l'état 34
    Aff             aller à l'état 35
    Print           aller à l'état 36
    Declaration     aller à l'état 37
    IfStatement     aller à l'état 38
    WhileStatement  aller à l'état 39


État 61

   42 WhileStatement: tWHILE Condition contenu •

    $défaut  réduction par utilisation de la règle 42 (WhileStatement)


État 62

   33 AffectationDuringDeclaration: tID • tAFFECT $@4 E
   34                             | tID •

    tAFFECT  décalage et aller à l'état 81

    $défaut  réduction par utilisation de la règle 34 (AffectationDuringDeclaration)


État 63

   27 Declaration: Type $@2 AffectationDuringDeclaration • MultipleDeclaration tSEMI

    tCOMMA  décalage et aller à l'état 82

    $défaut  réduction par utilisation de la règle 31 (MultipleDeclaration)

    MultipleDeclaration  aller à l'état 83


État 64

   53 E: E • tADD E
   54  | tLPAR E • tADD E tRPAR
   55  | E • tSUB E
   56  | tLPAR E • tSUB E tRPAR
   57  | E • tMUL E
   58  | tLPAR E • tMUL E tRPAR
   59  | E • tDIV E
   60  | tLPAR E • tDIV E tRPAR

    tDIV  décalage et aller à l'état 84
    tMUL  décalage et aller à l'état 85
    tADD  décalage et aller à l'état 86
    tSUB  décalage et aller à l'état 87


État 65

   59 E: E tDIV • E

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 88


État 66

   57 E: E tMUL • E

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 89


État 67

   53 E: E tADD • E

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 90


État 68

   55 E: E tSUB • E

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 91


État 69

   24 Aff: tID tAFFECT E tSEMI •

    $défaut  réduction par utilisation de la règle 24 (Aff)


État 70

   29 Declaration: tCONST Type $@3 AffectationDuringDeclaration • MultipleDeclaration tSEMI

    tCOMMA  décalage et aller à l'état 82

    $défaut  réduction par utilisation de la règle 31 (MultipleDeclaration)

    MultipleDeclaration  aller à l'état 92


État 71

   25 Print: tPRINTF tLPAR E tRPAR • tSEMI

    tSEMI  décalage et aller à l'état 93


État 72

   49 Condition: tLPAR E tRPAR •

    $défaut  réduction par utilisation de la règle 49 (Condition)


État 73

   43 Condition: tLPAR E tCOMPEQ • E tRPAR

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 94


État 74

   44 Condition: tLPAR E tCOMPL • E tRPAR

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 95


État 75

   45 Condition: tLPAR E tCOMPG • E tRPAR

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 96


État 76

   46 Condition: tLPAR E tCOMPLE • E tRPAR

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 97


État 77

   47 Condition: tLPAR E tCOMPGE • E tRPAR

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 98


État 78

   48 Condition: tLPAR E tCOMPNEQ • E tRPAR

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 99


État 79

   37 IfStatement: tIF Condition $@5 tLBRACE • excus $@6 tRBRACE

    tID      décalage et aller à l'état 27
    tINT     décalage et aller à l'état 1
    tCHAR    décalage et aller à l'état 2
    tFLOAT   décalage et aller à l'état 3
    tCONST   décalage et aller à l'état 28
    tPRINTF  décalage et aller à l'état 29
    tIF      décalage et aller à l'état 30
    tWHILE   décalage et aller à l'état 31

    Type            aller à l'état 32
    excus           aller à l'état 100
    excu            aller à l'état 34
    Aff             aller à l'état 35
    Print           aller à l'état 36
    Declaration     aller à l'état 37
    IfStatement     aller à l'état 38
    WhileStatement  aller à l'état 39


État 80

   41 IfStatement: tIF Condition $@7 excus • $@8 tELSE tLBRACE excus $@9 tRBRACE

    $défaut  réduction par utilisation de la règle 39 ($@8)

    $@8  aller à l'état 101


État 81

   33 AffectationDuringDeclaration: tID tAFFECT • $@4 E

    $défaut  réduction par utilisation de la règle 32 ($@4)

    $@4  aller à l'état 102


État 82

   30 MultipleDeclaration: tCOMMA • AffectationDuringDeclaration MultipleDeclaration

    tID  décalage et aller à l'état 62

    AffectationDuringDeclaration  aller à l'état 103


État 83

   27 Declaration: Type $@2 AffectationDuringDeclaration MultipleDeclaration • tSEMI

    tSEMI  décalage et aller à l'état 104


État 84

   59 E: E tDIV • E
   60  | tLPAR E tDIV • E tRPAR

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 105


État 85

   57 E: E tMUL • E
   58  | tLPAR E tMUL • E tRPAR

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 106


État 86

   53 E: E tADD • E
   54  | tLPAR E tADD • E tRPAR

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 107


État 87

   55 E: E tSUB • E
   56  | tLPAR E tSUB • E tRPAR

    tID      décalage et aller à l'état 51
    tNUMBER  décalage et aller à l'état 52
    tREAL    décalage et aller à l'état 53
    tLPAR    décalage et aller à l'état 54

    E  aller à l'état 108


État 88

   53 E: E • tADD E
   55  | E • tSUB E
   57  | E • tMUL E
   59  | E • tDIV E
   59  | E tDIV E •

    $défaut  réduction par utilisation de la règle 59 (E)


État 89
